5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1674_1100.log
== TEST (2019-04-25 11:11:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))
print("Entrada:" a)


if (a!=2) or (a!=5) (a!=10) or(a!=20) or(a!=50) or(a!=100): 
	print("Animal: invalido")
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca"
elif (a==10):
	print("Animal: Arara"
elif (a==20):
	print("Animal: Mico-leao-dourado)
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- ERROR:
File "XXXX", line 5
    print("Entrada:" a)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:11:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))
print(Entrada:, a)


if (a!=2) or (a!=5) (a!=10) or(a!=20) or(a!=50) or(a!=100): 
	print("Animal: invalido")
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca"
elif (a==10):
	print("Animal: Arara"
elif (a==20):
	print("Animal: Mico-leao-dourado)
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- ERROR:
File "XXXX", line 5
    print(Entrada:, a)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:11:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))
print(Entrada: a)


if (a!=2) or (a!=5) (a!=10) or(a!=20) or(a!=50) or(a!=100): 
	print("Animal: invalido")
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca"
elif (a==10):
	print("Animal: Arara"
elif (a==20):
	print("Animal: Mico-leao-dourado)
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- ERROR:
File "XXXX", line 5
    print(Entrada: a)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))

print(Entrada: a)


if (a!=2) or (a!=5) (a!=10) or(a!=20) or(a!=50) or(a!=100): 
	print("Animal: invalido")
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca"
elif (a==10):
	print("Animal: Arara"
elif (a==20):
	print("Animal: Mico-leao-dourado)
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- ERROR:
File "XXXX", line 6
    print(Entrada: a)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))

print("Entrada:" a)


if (a!=2) or (a!=5) (a!=10) or(a!=20) or(a!=50) or(a!=100): 
	print("Animal: invalido")
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca"
elif (a==10):
	print("Animal: Arara"
elif (a==20):
	print("Animal: Mico-leao-dourado)
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- ERROR:
File "XXXX", line 6
    print("Entrada:" a)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))

print("Entrada:"a)


if (a!=2) or (a!=5) (a!=10) or(a!=20) or(a!=50) or(a!=100): 
	print("Animal: invalido")
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca"
elif (a==10):
	print("Animal: Arara"
elif (a==20):
	print("Animal: Mico-leao-dourado)
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- ERROR:
File "XXXX", line 6
    print("Entrada:"a)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:15:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))
b = Entrada: a
print(b)


if (a!=2) or (a!=5) (a!=10) or(a!=20) or(a!=50) or(a!=100): 
	print("Animal: invalido")
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca"
elif (a==10):
	print("Animal: Arara"
elif (a==20):
	print("Animal: Mico-leao-dourado)
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- ERROR:
File "XXXX", line 5
    b = Entrada: a
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:15:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))


if (a!=2) or (a!=5) (a!=10) or(a!=20) or(a!=50) or(a!=100): 
	print("Animal: invalido")
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca"
elif (a==10):
	print("Animal: Arara"
elif (a==20):
	print("Animal: Mico-leao-dourado)
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- ERROR:
File "XXXX", line 13
    elif (a==10):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:16:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))


if (a!=2) or (a!=5) (a!=10) or(a!=20) or(a!=50) or(a!=100): 
	print("Animal: invalido")
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- OUTPUT:
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:17:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))


if (a!=2) or (a!=5) (a!=10) or(a!=20) or(a!=50) or(a!=100): 
	print("Animal: invalido")
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- OUTPUT:
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:18:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))


if (a!=2) or (a!=5) (a!=10) or(a!=20) or(a!=50) or(a!=100): 
	print("Animal: invalido")
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- OUTPUT:
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:18:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))


if (a!=2) or (a!=5) (a!=10) or(a!=20) or(a!=50) or(a!=100): 
	print("Animal: invalido")
	
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- OUTPUT:
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:22:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))

2 = "Tartaruga"	  
5 = "Garca"
10 = "Arara"
20 = "Mico-leao-dourado"
50 ="Onca-pintada"
100 = "Garoupa"



if (a!=2) or (a!=5) (a!=10) or(a!=20) or(a!=50) or(a!=100): 
	print("Animal: invalido")	
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- ERROR:
File "XXXX", line 6
    2 = "Tartaruga"	  
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:27:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))

#2 = "Tartaruga"	  
#5 = "Garca"
#10 = "Arara"
#20 = "Mico-leao-dourado"
#50 ="Onca-pintada"
#100 = "Garoupa"



if (a==100)
	print("Animal: invalido")	
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print(("Animal: invalido"))
-- ERROR:
File "XXXX", line 15
    if (a==100)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))

#2 = "Tartaruga"	  
#5 = "Garca"
#10 = "Arara"
#20 = "Mico-leao-dourado"
#50 ="Onca-pintada"
#100 = "Garoupa"



if (a==100):
	print("Animal: invalido")	
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print(("Animal: invalido"))
-- OUTPUT:
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))

#2 = "Tartaruga"	  
#5 = "Garca"
#10 = "Arara"
#20 = "Mico-leao-dourado"
#50 ="Onca-pintada"
#100 = "Garoupa"



if (a==100):
	print("Animal: invalido")	
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print(("Animal: invalido"))
-- OUTPUT:
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))

#2 = "Tartaruga"	  
#5 = "Garca"
#10 = "Arara"
#20 = "Mico-leao-dourado"
#50 ="Onca-pintada"
#100 = "Garoupa"



if (a==100):
	print("Animal: Garoupa")	
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print(("Animal: invalido"))
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))

#2 = "Tartaruga"	  
#5 = "Garca"
#10 = "Arara"
#20 = "Mico-leao-dourado"
#50 ="Onca-pintada"
#100 = "Garoupa"



if (a==100):
	print("Animal: Garoupa")	
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print(("Animal: invalido"))
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))

#2 = "Tartaruga"	  
#5 = "Garca"
#10 = "Arara"
#20 = "Mico-leao-dourado"
#50 ="Onca-pintada"
#100 = "Garoupa"



if (a==100):
	print("Animal: Garoupa")	
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print(("Animal: invalido"))
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:30:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))

#2 = "Tartaruga"	  
#5 = "Garca"
#10 = "Arara"
#20 = "Mico-leao-dourado"
#50 ="Onca-pintada"
#100 = "Garoupa"
print("Entrada:" a)


if (a==100):
	print("Animal: Garoupa")	
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print(("Animal: Invalido"))
-- ERROR:
File "XXXX", line 12
    print("Entrada:" a)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:31:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))

#2 = "Tartaruga"	  
#5 = "Garca"
#10 = "Arara"
#20 = "Mico-leao-dourado"
#50 ="Onca-pintada"
#100 = "Garoupa"
print("Entrada:",a)


if (a==100):
	print("Animal: Garoupa")	
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print(("Animal: Invalido"))
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:31:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("valor da cedula por R$: "))

#2 = "Tartaruga"	  
#5 = "Garca"
#10 = "Arara"
#20 = "Mico-leao-dourado"
#50 ="Onca-pintada"
#100 = "Garoupa"
print("Entrada:",a)


if (a==100):
	print("Animal: Garoupa")	
elif (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
else:
	print(("Animal: Invalido"))
-- EXECUTION TIME:
0.131248
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
